# kingbird-dashboard

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  manage.py  package.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
kingbird_dashboard/: dashboard.py  error_handling.py  exceptions.py  version.py
kingbird_dashboard/api/: client.py  rest_api.py
kingbird_dashboard/content/kingbirds/: panel.py  tests.py  urls.py
kingbird_dashboard/default/: panel.py
kingbird_dashboard/default/templates/default/: base.html  table.html
kingbird_dashboard/enabled/: _90_kingbird.py  _90_kingbird_kingbird_panelgroup.py  _91_kingbird_kingbird_kingbirds_panel.py  _91_kingbird_qsync.py  _91_kingbird_quotasync.py  _92_kingbird_resourcesync.py
kingbird_dashboard/quota_management/: forms.py  panel.py  tables.py  urls.py  views.py
kingbird_dashboard/quota_management/templates/quota_management/: _delete.html  _sync.html  _update.html  delete.html  detail.html  index.html  sync.html  update.html
kingbird_dashboard/resource_management/: forms.py  panel.py  tables.py  urls.py  views.py
kingbird_dashboard/resource_management/templates/resource_management/: _create.html  _create_template.html  create.html  create_template.html  detail.html  index.html  resources.html
kingbird_dashboard/test/: settings.py
releasenotes/source/: conf.py  index.rst
(+20 files in other folders)
