[metadata]
name = kingbird-dashboard
summary = User Interface for Kingbird
description-file = README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    kingbird_dashboard

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
